--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             </div>
             <div class="col-lg-6">
 			<p class="profi">
-				佐藤元輝(さとうげんき)<br>ITコンサルタント。上場企業・ベンチャー企業のDX・業務構築支援を主に担当。
+				メヌースー(めぬーすー)<br>ITコンサルタント。上場企業・ベンチャー企業のDX・業務構築支援を主に担当。
             </p>
             <p>
             	主な実績<br>
